deploy: 70070344007d0bb8b689194741aba6ce18a9fbde

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -130,10 +130,10 @@
             
   <h1>All modules for which code is available</h1>
 <ul><li><a href="sigkit/core/base.html">sigkit.core.base</a></li>
-<li><a href="sigkit/core/utils.html">sigkit.core.utils</a></li>
 <li><a href="sigkit/datasets/base.html">sigkit.datasets.base</a></li>
 <li><a href="sigkit/impairments/awgn.html">sigkit.impairments.awgn</a></li>
 <li><a href="sigkit/impairments/base.html">sigkit.impairments.base</a></li>
+<li><a href="sigkit/metrics/integrity.html">sigkit.metrics.integrity</a></li>
 <li><a href="sigkit/modem/base.html">sigkit.modem.base</a></li>
 <li><a href="sigkit/transforms/awgn.html">sigkit.transforms.awgn</a></li>
 </ul>
