--- a/genindex.html
+++ b/genindex.html
@@ -164,7 +164,7 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/sigkit.core.html#sigkit.core.utils.calculate_ber">calculate_ber() (in module sigkit.core.utils)</a>
+      <li><a href="api/sigkit.metrics.html#sigkit.metrics.integrity.calculate_ber">calculate_ber() (in module sigkit.metrics.integrity)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -184,7 +184,7 @@
 <h2 id="E">E</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/sigkit.core.html#sigkit.core.utils.estimate_snr">estimate_snr() (in module sigkit.core.utils)</a>
+      <li><a href="api/sigkit.metrics.html#sigkit.metrics.integrity.estimate_snr">estimate_snr() (in module sigkit.metrics.integrity)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -222,8 +222,6 @@
 </li>
         <li><a href="api/sigkit.core.html#module-sigkit.core.base">sigkit.core.base</a>
 </li>
-        <li><a href="api/sigkit.core.html#module-sigkit.core.utils">sigkit.core.utils</a>
-</li>
         <li><a href="api/sigkit.datasets.html#module-sigkit.datasets">sigkit.datasets</a>
 </li>
         <li><a href="api/sigkit.datasets.html#module-sigkit.datasets.base">sigkit.datasets.base</a>
@@ -235,6 +233,8 @@
         <li><a href="api/sigkit.impairments.html#module-sigkit.impairments.base">sigkit.impairments.base</a>
 </li>
         <li><a href="api/sigkit.metrics.html#module-sigkit.metrics">sigkit.metrics</a>
+</li>
+        <li><a href="api/sigkit.metrics.html#module-sigkit.metrics.integrity">sigkit.metrics.integrity</a>
 </li>
         <li><a href="api/sigkit.modem.html#module-sigkit.modem">sigkit.modem</a>
 </li>
@@ -279,13 +279,6 @@
 </li>
       </ul></li>
       <li>
-    sigkit.core.utils
-
-      <ul>
-        <li><a href="api/sigkit.core.html#module-sigkit.core.utils">module</a>
-</li>
-      </ul></li>
-      <li>
     sigkit.datasets
 
       <ul>
@@ -313,8 +306,6 @@
         <li><a href="api/sigkit.impairments.html#module-sigkit.impairments.awgn">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     sigkit.impairments.base
 
@@ -322,11 +313,20 @@
         <li><a href="api/sigkit.impairments.html#module-sigkit.impairments.base">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     sigkit.metrics
 
       <ul>
         <li><a href="api/sigkit.metrics.html#module-sigkit.metrics">module</a>
+</li>
+      </ul></li>
+      <li>
+    sigkit.metrics.integrity
+
+      <ul>
+        <li><a href="api/sigkit.metrics.html#module-sigkit.metrics.integrity">module</a>
 </li>
       </ul></li>
       <li>
