--- a/_modules/index.html
+++ b/_modules/index.html
@@ -133,8 +133,10 @@
 <li><a href="sigkit/datasets/base.html">sigkit.datasets.base</a></li>
 <li><a href="sigkit/impairments/awgn.html">sigkit.impairments.awgn</a></li>
 <li><a href="sigkit/impairments/base.html">sigkit.impairments.base</a></li>
+<li><a href="sigkit/impairments/frequency_shift.html">sigkit.impairments.frequency_shift</a></li>
 <li><a href="sigkit/metrics/integrity.html">sigkit.metrics.integrity</a></li>
 <li><a href="sigkit/modem/base.html">sigkit.modem.base</a></li>
+<li><a href="sigkit/modem/psk.html">sigkit.modem.psk</a></li>
 <li><a href="sigkit/transforms/awgn.html">sigkit.transforms.awgn</a></li>
 </ul>
 
