--- a/_modules/sigkit/metrics/integrity.html
+++ b/_modules/sigkit/metrics/integrity.html
@@ -184,7 +184,7 @@
         <span class="n">bits_est</span> <span class="o">=</span> <span class="n">bits_est</span><span class="o">.</span><span class="n">cpu</span><span class="p">()</span><span class="o">.</span><span class="n">numpy</span><span class="p">()</span>
 
     <span class="n">errors</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">count_nonzero</span><span class="p">(</span><span class="n">bits_true</span> <span class="o">!=</span> <span class="n">bits_est</span><span class="p">)</span>
-    <span class="k">return</span> <span class="p">(</span><span class="n">errors</span> <span class="o">/</span> <span class="n">bits_true</span><span class="o">.</span><span class="n">size</span><span class="p">)</span></div>
+    <span class="k">return</span> <span class="n">errors</span> <span class="o">/</span> <span class="n">bits_true</span><span class="o">.</span><span class="n">size</span></div>
 
 </pre></div>
 
