--- a/genindex.html
+++ b/genindex.html
@@ -139,6 +139,7 @@
  | <a href="#F"><strong>F</strong></a>
  | <a href="#I"><strong>I</strong></a>
  | <a href="#M"><strong>M</strong></a>
+ | <a href="#P"><strong>P</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
  
@@ -150,6 +151,8 @@
 
       <ul>
         <li><a href="api/sigkit.impairments.html#sigkit.impairments.base.Impairment.apply">(sigkit.impairments.base.Impairment method)</a>
+</li>
+        <li><a href="api/sigkit.impairments.html#sigkit.impairments.frequency_shift.FrequencyShift.apply">(sigkit.impairments.frequency_shift.FrequencyShift method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -177,7 +180,11 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/sigkit.modem.html#sigkit.modem.base.Modem.demodulate">demodulate() (sigkit.modem.base.Modem method)</a>
+
+      <ul>
+        <li><a href="api/sigkit.modem.html#sigkit.modem.psk.PSK.demodulate">(sigkit.modem.psk.PSK method)</a>
 </li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -193,6 +200,10 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/sigkit.transforms.html#sigkit.transforms.awgn.ApplyAWGN.forward">forward() (sigkit.transforms.awgn.ApplyAWGN method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/sigkit.impairments.html#sigkit.impairments.frequency_shift.FrequencyShift">FrequencyShift (class in sigkit.impairments.frequency_shift)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -211,7 +222,11 @@
       <li><a href="api/sigkit.modem.html#sigkit.modem.base.Modem">Modem (class in sigkit.modem.base)</a>
 </li>
       <li><a href="api/sigkit.modem.html#sigkit.modem.base.Modem.modulate">modulate() (sigkit.modem.base.Modem method)</a>
+
+      <ul>
+        <li><a href="api/sigkit.modem.html#sigkit.modem.psk.PSK.modulate">(sigkit.modem.psk.PSK method)</a>
 </li>
+      </ul></li>
       <li>
     module
 
@@ -232,6 +247,8 @@
 </li>
         <li><a href="api/sigkit.impairments.html#module-sigkit.impairments.base">sigkit.impairments.base</a>
 </li>
+        <li><a href="api/sigkit.impairments.html#module-sigkit.impairments.frequency_shift">sigkit.impairments.frequency_shift</a>
+</li>
         <li><a href="api/sigkit.metrics.html#module-sigkit.metrics">sigkit.metrics</a>
 </li>
         <li><a href="api/sigkit.metrics.html#module-sigkit.metrics.integrity">sigkit.metrics.integrity</a>
@@ -240,11 +257,21 @@
 </li>
         <li><a href="api/sigkit.modem.html#module-sigkit.modem.base">sigkit.modem.base</a>
 </li>
+        <li><a href="api/sigkit.modem.html#module-sigkit.modem.psk">sigkit.modem.psk</a>
+</li>
         <li><a href="api/sigkit.transforms.html#module-sigkit.transforms">sigkit.transforms</a>
 </li>
         <li><a href="api/sigkit.transforms.html#module-sigkit.transforms.awgn">sigkit.transforms.awgn</a>
 </li>
       </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="P">P</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/sigkit.modem.html#sigkit.modem.psk.PSK">PSK (class in sigkit.modem.psk)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -304,13 +331,20 @@
         <li><a href="api/sigkit.impairments.html#module-sigkit.impairments.awgn">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     sigkit.impairments.base
 
       <ul>
         <li><a href="api/sigkit.impairments.html#module-sigkit.impairments.base">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    sigkit.impairments.frequency_shift
+
+      <ul>
+        <li><a href="api/sigkit.impairments.html#module-sigkit.impairments.frequency_shift">module</a>
 </li>
       </ul></li>
       <li>
@@ -339,6 +373,13 @@
 
       <ul>
         <li><a href="api/sigkit.modem.html#module-sigkit.modem.base">module</a>
+</li>
+      </ul></li>
+      <li>
+    sigkit.modem.psk
+
+      <ul>
+        <li><a href="api/sigkit.modem.html#module-sigkit.modem.psk">module</a>
 </li>
       </ul></li>
       <li>
