--- a/genindex.html
+++ b/genindex.html
@@ -171,7 +171,7 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/sigkit.core.html#sigkit.core.base.Signal.center_freq">center_freq (sigkit.core.base.Signal attribute)</a>
+      <li><a href="api/sigkit.core.html#sigkit.core.base.Signal.carrier_frequency">carrier_frequency (sigkit.core.base.Signal attribute)</a>
 </li>
   </ul></td>
 </tr></table>
